exclude latge dirs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,13 @@
     "secrets.enabledFolders": [
         "Azure"
     ],
-    "python.formatting.provider": "black"
+    "python.formatting.provider": "black",
+    "files.watcherExclude": {
+        "**/.git/objects/**": true,
+        "**/.git/subtree-cache/**": true,
+        "**/node_modules/*/**": true,
+        "**/.hg/store/**": true,
+        "data/": true, 
+        "env/": true,
+    }
 }
