--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,22 @@ asttokens==2.0.7
 astunparse==1.6.3
 backcall==0.2.0
 black==22.6.0
+Brotli==1.0.9
 cachetools==5.2.0
 certifi==2022.6.15
 charset-normalizer==2.1.0
 click==8.1.3
 cycler==0.11.0
+dash==2.6.1
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
 debugpy==1.6.2
 decorator==5.1.1
 entrypoints==0.4
 executing==0.9.1
+Flask==2.2.2
+Flask-Compress==1.12
 flatbuffers==1.12
 fonttools==4.34.4
 gast==0.4.0
@@ -25,7 +32,9 @@ idna==3.3
 ImageHash==4.2.1
 ipykernel==6.15.1
 ipython==8.4.0
+itsdangerous==2.1.2
 jedi==0.18.1
+Jinja2==3.1.2
 joblib==1.1.0
 jupyter-client==7.3.4
 jupyter-core==4.11.1
@@ -50,6 +59,7 @@ pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.2.0
 platformdirs==2.5.2
+plotly==5.10.0
 prompt-toolkit==3.0.30
 protobuf==3.19.4
 psutil==5.9.1
@@ -71,6 +81,7 @@ scipy==1.9.0
 six==1.15.0
 sklearn==0.0
 stack-data==0.3.0
+tenacity==8.0.1
 termcolor==1.1.0
 threadpoolctl==3.1.0
 tomli==2.0.1
@@ -81,3 +92,4 @@ urllib3==1.26.11
 wcwidth==0.2.5
 Werkzeug==2.2.2
 wrapt==1.14.1
+xgboost==1.6.1
